--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ numpy>=2.2.6
 feature-engine>=1.9.3
 requests-cache>=1.2.1
 scikit-learn>=1.6.1
-wavetrainer>=0.2.44
+wavetrainer>=0.3.3
 tqdm>=4.67.1
 pyvinecopulib>=0.7.5
 fredapi>=0.5.2
@@ -13,3 +13,4 @@ python-dotenv>=1.1.0
 kaleido>=1.2.0
 plotly>=6.3.1
 scipy>=1.16.3
+joblib>=1.5.2
